<resources>
    <string name="app_name">MyChat2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="logout">Logout</string>
    <string name="add_room">add room</string>
    <string name="loading">loading</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activation_info">You have successfully create a new account but you need to activate. To activate your account check your mail and click the activation link.</string>
    <string name="activation_info2">if you don\'t have somehow, just get a new one down below.</string>
    <string name="type_something">type something..</string>
</resources>